--- a/assets/css/_common-parts.scss
+++ b/assets/css/_common-parts.scss
@@ -1,6 +1,21 @@
+.color-box {
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  display: inline-block;
+}
 
-.header {
-  margin-bottom: 30px;
+.color-01 {
+  background-color: #0086D3;
+}
+.color-02 {
+  background-color: #78B2D1;
+}
+.color-03 {
+  background-color: #F0F6FA;
+}
+.color-04 {
+  background-color: #FFEA5D;
 }
 
 // 見出し
@@ -16,41 +31,14 @@
   text-align: center;
 }
 
-// 文章
-.login-name {
-  font-size: 1.4rem;
-
-  &__border_bottom {
-    border-bottom: 1px solid #ddd;
-    padding: 0 0 .5em;
-  }
+// 入力部品
+.required {
+  color: #ff5d5d;
+  display: inline-block;
+  margin-left: 8px;
 }
 
-  .login-name-box {
-    display: flex;
-    margin-bottom: 10px;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-.result-message {
-  font-size: 1.6rem;
-}
-
-.input-error-message {
-  text-align: center;
-  padding: 0.5em;
-  font-size: 1.6rem;
-}
-
-.alert-message {
-  color: rgb(203, 46, 37);
-  font-size: 1.6rem;
-}
-
-// テキストボックス
-
-.text-box {
+.input-box {
   width: 280px;
   height: 50px;
   position: relative;
@@ -74,6 +62,86 @@
     border-radius: 5px;  
   }
 } 
+
+.selectbox-box {
+  position: relative;
+  margin-bottom: 30px;
+  z-index: 800;
+  &__label {
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 0 1em;
+    z-index: 801;
+    position: absolute;
+    top: -8px;
+    left: 16px;
+  }
+  &__select {
+    width: 280px;
+    display: block;
+    border: 1px solid #ddd;
+    padding: 1.5em 1em 1em;
+  }
+}
+
+.radio-box {
+  position: relative;
+  margin-bottom: 30px;
+  z-index: 800;
+  border: 1px solid #ddd;
+  padding: 1.5em 1em 1em;
+  background-color: #fff;
+  &__label {
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 0 1em;
+    z-index: 801;
+    position: absolute;
+    top: -8px;
+    left: 16px;
+  }
+  &__item {
+    display: inline-block;
+    margin-right: 8px;
+  }
+  &__radio {
+    margin-bottom: 8px;
+  }
+  label {
+    font-size: 2rem;
+  }
+}
+
+.check-box {
+  position: relative;
+  margin-bottom: 30px;
+  z-index: 800;
+  border: 1px solid #ddd;
+  padding: 1.5em 1em 1em;
+  background-color: #fff;
+  &__label {
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 0 1em;
+    z-index: 801;
+    position: absolute;
+    top: -8px;
+    left: 16px;
+  }
+  &__item {
+    display: inline-block;
+    margin-right: 8px;
+  }
+  &__radio {
+    margin-bottom: 8px;
+  }
+  label {
+    font-size: 2rem;
+  }
+}
 
 .textarea-box {
   width: auto;
@@ -99,53 +167,6 @@
   }
 } 
 
-// アイコン
-.result-icon {
-  font-size: 5rem;
-  &--primary {
-    color: rgba(68, 157, 68, 1);
-  }
-  &--error {
-    color: rgb(203, 46, 37);
-  }
-}
-
-// ページネーション
-.pagenation {
-  max-width: 300px;
-  margin: 0 auto;
-  padding: 0 16px;
-  display: flex;
-  justify-content: space-between;
-  &__left,
-  &__right {
-    color: #55595c;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 8px;
-    border: 1px solid #ddd;
-    transition: .2s;
-    &:hover {
-      opacity: .8;
-      background-color: #ddd;
-    }
-    &--disable {
-      opacity: 0;
-    }
-  }
-}
-
-
-// container・wrapper
-
-.section-container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 16px;
-}
 
 
 
@@ -156,12 +177,9 @@
   line-height: 1;
   text-align: center;
   text-decoration: none;
-
   border-radius: 4px;
   padding: 0.65em;
   transition: .2s;
-
-  // 基本文字サイズ
   font-size: 1.6rem;
 
   &--exsmall {
@@ -187,6 +205,12 @@
     box-shadow: 0 0 2px gray;
   }
 
+  &--blue {
+    color: #fff;
+    background-color: rgba(120, 178, 209, 1);
+    border: 1px solid transparent;
+  }
+  
   &--orange {
     color: #fff;
     background-color: rgba(238, 152, 0, 1);
@@ -204,6 +228,12 @@
     background-color: rgb(203, 46, 37);
     border: 1px solid transparent;
   }
+
+  &--yellow {
+    color: #555;
+    background-color: rgba(255, 234, 93, 1);
+    border: 1px solid transparent;
+  }
   
   &--link_transparent:focus,
   &--link_transparent:hover {
@@ -211,6 +241,13 @@
   color: currentColor;
   border-color: #eee;
 }
+
+  &--link_blue:focus,
+  &--link_blue:hover {
+  background-color: rgba(120, 178, 209, 0.8);
+  color: #eee;
+  border-color: transparent;
+  }
 
   &--link_orange:focus,
   &--link_orange:hover {
@@ -233,283 +270,65 @@
   border-color: transparent;
   }
 
+  &--link_yellow:focus,
+  &--link_yellow:hover {
+  background-color: rgba(255, 234, 93, 0.6);
+  color: #555;
+  border-color: transparent;
+  }
+
 }
 
-// ボタン集合
-.select-buttons {
-  &__text {
-    text-align: center;
-    font-size: 1.6rem;
-    margin-bottom: 16px;
-  }
-  &__buttons {
-    max-width: 300px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-  }
-}
+// お店カード
 
-// カード
-.card {
-  border-radius: 4px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
-  &__link {
-    display: block;
-    color: currentColor;
-    text-decoration: none;
-  }
-  &__imag-wrapper {
-    position: relative;
-    padding-top: 56.25%;
+.store-card {
+  font-size: 1.2rem;
+  width: 330px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.13) 0px 1px 6px 0px;
+  margin: 0 auto 16px;
+  &__image {
+    border-radius: 10px 10px 0 0;
     overflow: hidden;
-    border-radius: 4px 4px 0 0;
   }
-  &__img {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    transform: translateY(-50%);
+  &__detail {
+    padding: 1em;
+    display: flex;
+    position: relative;
   }
-  &__body {
-    padding: 0 7px 10px;
-    height: 110px;
+  .detail-left {
+    margin-right: 5px;
   }
-  &__title {
-    margin-bottom: 16px;
+  &__name {
     font-size: 1.4rem;
     font-weight: bold;
   }
-  &__text {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
+  .detail-right {
+    background-color:  #F0F6FA;
+    color:  #78B2D1;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
-}
-
-// 詳細画面のデータの見出しとデータ
-.staff-data-list {
-  &__title {
-    padding: 0.5em;
-    font-size: 1.4rem;
+  &__open-time {
+    padding: 0.2em 1em;
   }
-  &__data {
-    padding: 0.5em 3em;
-    font-size: 1.6rem;
-    margin-bottom: 20px;
-  }
-}
-
-// 講師一覧データ
-
-.staff-table {
-  font-size: 1.6rem;
-  border-collapse: collapse;
-  width: 100%;
-  text-align: center;
-
-  &__thead {
-    background-color: #eceeef;
-    height: 40px;
-  }
-
-      &__thead-item1,
-      &__thead-item2,
-      &__thead-item3 {
-        font-weight: normal;
-        padding: 0.5em 0;
-        text-align: left;
-      }
-
-      &__thead-item1 {
-        width: 15%;
-      }
-
-      &__thead-item2 {
-        width: 20%;
-      }
-
-      &__thead-item3 {
-        width: 65%;
-      }
-
-  &__tbody {
-    font-size: 1.4rem;
-    > tr {
-      border-bottom: 1px solid #ddd;
-    }
-  }
-
-      &__tbody-item1,
-      &__tbody-item2,
-      &__tbody-item3 {
-        padding: 0.5em 0;
-        position: relative;
-        label {
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: left;
-        }
-      }
-
-      &__tbody-item2 {
-        text-align: left;
-      }
-
-      &__tbody-item3 {
-        text-align: left;
-      }
-
-}
-
-// 受講生一覧データ
-
-.student-table {
-  font-size: 1.6rem;
-  border-collapse: collapse;
-  width: 100%;
-  text-align: center;
-
-  &__thead {
-    background-color: #eceeef;
-    height: 40px;
-  }
-
-  &__thead-item1,
-  &__thead-item2,
-  &__thead-item3,
-  &__thead-item4,
-  &__thead-item5 {
-    font-weight: normal;
-    padding: 0.5em 0;
-    text-align: center;
-    overflow: hidden;
-  }
-  // ラジオボタン 
-  &__thead-item1 {
-    width: 3%;
-  }
-
-  // コード
-  &__thead-item2 {
-    width: 5%;
-  }
-
-  // 名前
-  &__thead-item3 {
-    width: 8%;
-  }
-
-  // 選択コース
-  &__thead-item4 {
-    width: 15%;
-  }
-
-  // 卒業後の進路
-  &__thead-item5 {
-    width: 15%;
-  }
-
-  &__tbody {
-    font-size: 1.4rem;
-    > tr {
-      border-bottom: 1px solid #ddd;
-      transition: 0.1s;
-      &:hover {
-        background-color: rgba(255, 192, 203, 0.3);
-      }
-    }
-  }
-
-  &__tbody-item1,
-  &__tbody-item2,
-  &__tbody-item3,
-  &__tbody-item4,
-  &__tbody-item5 {
-    padding: 0.5em 0;
-    position: relative;
-    text-align: center;
-    label {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
-  }
-
-}
-
-#js-student-progress-list {
-  form {
-    text-align: left;
-    height: 120px;
-    margin-bottom: 30px;
-    textarea {
-      padding: 0.5em 1em;
-      width: 75%;
-      height: 120px;
-    }
-    button {
-      width: 20%;
-      max-width: 120px;
-      height: 120px;
-      vertical-align: top;
-    }
-  }
-}
-
-// 進捗リスト
-#js-student-progress-list .progress-list {
-  margin-bottom: 30px;
-  &__item {
-    background-color: #fff;
+  &__footer {
+    border-top: 1px dotted #ccc;
+    color: #777;
     display: flex;
-    overflow: hidden;
-    border-top: 1px solid #ddd;
-    &:hover .progress-list__comment {
-      transition: 1s;
-      max-height: 200px;
-    } 
+    padding: 1em 1em;
+    p>span {
+      margin-left: 8px;
+    }
   }
-  &__date {
-    font-size: 1.2rem;
-    max-width: 100px;
-    width: 15%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-right: 1px dotted #ddd;
+  &__station {
+    margin-right: 16px;
   }
-  &__comment {
-    transition: all 0.1s;
-    min-height: 88px;
-    max-height: 88px;
-    width: 85%;
-    overflow: hidden;
-    padding: 0.5em 1em;
-    border-right: 1px dotted #ddd;
+  &__wifi {
+    margin-right: 16px;
   }
-  &__written-by {
-    font-size: 1.2rem;
-    width: 10%;
-    max-width: 120px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  &__power-source {
+    margin-right: 16px;
   }
 }
