--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -1,41 +1,112 @@
+.header {
+  position: sticky;
+  background-color: #fff;
+  top: 0;
+  z-index: 9999;
+  height: 60px;
+  box-shadow: rgba(0, 0, 0, 0.13) 0px 1px 6px 0px;
+  &__inner {
+    max-width: 1350px;
+    margin: 0 auto;
+    display: flex;
+  }
+  &__logo {
+    max-width: 60px;
+    padding-top: 5px;
+    margin-left: 16px;
+    position: relative;
+    h1 {
+      width: 100%;
+      font-size: 1rem;
+      text-align: center;
+    }
+    .header-logo {
+      margin-top: -5px;
+    }
+  }
+  &__right {
+    margin-left: auto;
+    width: 200px;
+    p {
+      width: 100%;
+      height: 45px;
+      border-radius: 0px;
+      a {
+        color: #fff;
+      }
+    }
+    .tutorial {
+      background-color: #F0F6FA;
+      a {
+        color: #999;
+      }
+    }
+  }
+}
 
 .gnavi {
-  height: 40px;
-  padding: 0 16px;
-  box-shadow: rgba(0, 0, 0, 0.13) 0px 2px 6px 0px;
-    &__inner {
-    max-width: 1100px;
-    height: 100%;
-    margin: 0 auto;
-  }
+  height: 60px;
+  margin-bottom: 80px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
   &__list {
     display: flex;
     height: 100%;
   }
   &__item {
-    flex: 1 1;
-    display: flex;
+    font-weight: bold;
+    padding: 0 2em;
+    background-image: linear-gradient(to right, rgba(0,0,0,0) 50%, #F0F6FA 50%);
+    background-position: 0 50%;
+    background-size: 200% auto;
+    transition: 0.3s;
+    &:hover {
+      background-position: -100% 0;
+    }
+    &--active {
+      pointer-events: none;
+      position: relative;
+      &:before {
+        content: '';
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;
+        background-color: #0086D3;
+        position: absolute;
+        top: 5px;
+        left: 45%;
+      }
+    }
   }
   &__link {
-    display: flex;
-    flex: 1 1;
-    justify-content: center;
+    display: inline-block;
+    line-height: 60px;
     text-decoration: none;
     color: inherit;
     transition: .2s;
     span {
-      display: flex;
-      align-items: center;
-      word-break: keep-all;
-    }
-    &:hover {
-      background-color: #ddd;
-      color: #000;
-    }
-    &--active {
-      pointer-events: none;
-      border-bottom: 1px solid #ccc;
+      font-size: 1.4rem;
     }
   }
 }
 
+/* ------------------------------------ */
+/* タブレット用デザイン */
+/* ------------------------------------ */
+@media screen and (max-width: 1024px) {
+  
+  .header {
+    display: none;
+  }
+  
+  
+  
+}
+
+/* ------------------------------------ */
+/* ▼スマホ用デザイン */
+/* ------------------------------------ */
+@media screen and (max-width: 768px) {
+
+}
