--- a/assets/css/_project.scss
+++ b/assets/css/_project.scss
@@ -13,6 +13,15 @@
 }
 
 .cafe-add {
+  #input-test {
+    text-align: center;
+    width: 350px;
+    cursor: pointer;
+    padding: 0.5em;
+    margin: 0 auto 2em;
+    background-color: #FFEA5D;
+    border-radius: 10px;
+  }
   padding-top: 40px;
   padding-bottom: 120px;
   form {
