--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,6 +711,36 @@ li.store-card {
 /* ------------------------------------ */
 /* ▼スマホ用デザイン */
 /* ------------------------------------ */
+@media screen and (max-width: 768px) {
+  .header__logo {
+    margin-left: 60px;
+  }
+  .header__right {
+    margin-left: auto;
+    width: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 60px;
+  }
+  .header__right p {
+    width: 100%;
+    height: 60px;
+    padding: 0;
+    line-height: 60px;
+  }
+  .header__right p a {
+    font-size: 1.2rem;
+    color: #fff;
+  }
+  .header__right .tutorial {
+    background-color: #F0F6FA;
+  }
+  .header__right .tutorial a {
+    color: #999;
+  }
+}
+
 .cafe-disp {
   padding-top: 40px;
   padding-bottom: 120px;
