ヘッダーとフッターの内容とアイコンを変更

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -700,6 +700,7 @@ li.store-card {
     text-decoration: none;
   }
   .nav-item i {
+    color: #555;
     display: block;
     font-size: 24px;
   }
