--- a/assets/css/_project.scss
+++ b/assets/css/_project.scss
@@ -52,3 +52,20 @@
     }
   }
 }
+
+.book-add-check {
+  padding-top: 40px;
+  padding-bottom: 120px;
+  dl {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  .form-btns {
+    margin-top: 32px;
+    text-align: center;
+    button {
+      margin-right: 16px;
+      margin-bottom: 16px;
+    }
+  }
+}
