--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -7,7 +7,7 @@ html {
 body {
   font-size: 1.6rem;
   color: #333;
-  background-color: #fcfcfc;
+  background-color: #fafafa;
   font-family: "Helvetica Neue",
                 Arial,
                 "Hiragino Kaku Gothic ProN",
