--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,12 +511,31 @@ ul.store-list {
           justify-content: space-between;
 }
 
+ul.book-list {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 li.store-card {
   /* 最低限の余白 */
   margin: 0 auto 30px;
 }
 
+li.book-card {
+  /* 最低限の余白 */
+  margin: 0 auto 30px;
+}
+
 .store-card.is-empty {
+  height: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.book-card.is-empty {
   height: 0;
   padding-top: 0;
   padding-bottom: 0;
@@ -536,7 +555,7 @@ li.store-card {
 }
 
 .cafe-data-list .disp-image {
-  max-width: 300px;
+  max-width: 200px;
 }
 
 .book-data-list__title {
@@ -550,10 +569,6 @@ li.store-card {
   margin-bottom: 20px;
 }
 
-.book-data-list .disp-image {
-  max-width: 300px;
-}
-
 .search {
   max-width: 600px;
   margin: 0 auto 20px;
@@ -564,21 +579,34 @@ li.store-card {
   margin-bottom: 8px;
 }
 
-.search .book-search {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media screen and (min-width: 768px) {
+  .search .book-search {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .search .book-search .google-books_search {
+  width: 100%;
+  margin-bottom: 10px;
+  text-align: center;
   background-color: #fff;
-  padding: 1em;
+  padding: 0.8em 3em;
   margin-right: 16px;
   border: 1px solid #ddd;
   border-radius: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .search .book-search .google-books_search {
+    width: auto;
+    margin-bottom: 0;
+    text-align: left;
+  }
 }
 
 .search .book-search .google-books_search p {
@@ -588,7 +616,7 @@ li.store-card {
 .search .book-search .bar-code_search {
   font-size: 1.4rem;
   display: block;
-  padding: 1em;
+  padding: 0.8em;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -707,6 +735,73 @@ li.store-card {
 
 .pagenation__left--disable, .pagenation__right--disable {
   opacity: 0;
+}
+
+.book-card {
+  padding: 0.5em 0;
+  width: calc((100% / 3) - 16px);
+  min-width: 350px;
+  border-radius: 10px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.16);
+  margin-left: 8px;
+}
+
+.book-card .mr24 {
+  margin-right: 24px;
+}
+
+.book-card__header {
+  margin-bottom: 16px;
+}
+
+.book-card__title {
+  font-size: 1.4rem;
+  padding: 0.5em;
+}
+
+.book-card__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+
+.book-card__thumbnail {
+  width: 40%;
+  padding: 0 0.5em;
+}
+
+.book-card__text {
+  font-size: 1.2rem;
+  padding: 0 0.5em;
+  margin-bottom: 5px;
+}
+
+.book-card__memo {
+  font-size: 1.2rem;
+  width: 60%;
+  padding: 0 0.5em;
+}
+
+#animatedModal .close-animatedModal {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+}
+
+#animatedModal .close-animatedModal .fa-times {
+  font-size: 5rem;
+}
+
+#animatedModal .modal-content {
+  padding-top: 24px;
+  text-align: center;
+}
+
+.max-w200 {
+  max-width: 200px;
 }
 
 .header {
@@ -926,6 +1021,27 @@ li.store-card {
 
 @media screen and (min-width: 768px) {
   .cafe-disp .store-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.book-disp {
+  padding-top: 40px;
+  padding-bottom: 120px;
+}
+
+@media screen and (min-width: 768px) {
+  .book-disp {
+    padding-top: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .book-disp .book-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
