--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -31,6 +31,7 @@
       width: 100%;
       height: 45px;
       border-radius: 0px;
+      cursor: pointer;
       a {
         color: #fff;
       }
@@ -60,6 +61,7 @@
     background-position: 0 50%;
     background-size: 200% auto;
     transition: 0.3s;
+    cursor: pointer;
     &:hover {
       background-position: -100% 0;
     }
