--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -28,12 +28,17 @@
     margin-left: auto;
     width: 200px;
     p {
+      padding: 0;
       width: 100%;
       height: 45px;
       border-radius: 0px;
-      cursor: pointer;
+      // cursor: pointer;
       a {
+        display: inline-block;
         color: #fff;
+        height: 100%;
+        width: 100%;
+        line-height: 45px;
       }
     }
     .tutorial {
