--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* Box sizing rules */
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 *,
 *::before,
 *::after {
@@ -420,6 +421,12 @@ img {
   border-color: transparent;
 }
 
+input[type="submit"][disabled] {
+  background: #DCDCDC;
+  cursor: not-allowed;
+  /* 禁止カーソル */
+}
+
 .store-card {
   font-size: 1.2rem;
   width: 350px;
@@ -800,6 +807,74 @@ li.book-card {
   text-align: center;
 }
 
+.registration-steps {
+  width: 80%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.registration-steps_line {
+  background: #bfbfbf;
+  width: 10%;
+  height: 1px;
+}
+
+.registration-steps_step {
+  position: relative;
+  width: 25%;
+}
+
+.registration-steps_step > .num {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #bfbfbf;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #bfbfbf;
+}
+
+.registration-steps_step > .text {
+  width: 100%;
+  color: #bfbfbf;
+  position: absolute;
+  left: 15%;
+  top: 30px;
+}
+
+.registration-steps_step.-active > .num {
+  border-color: #0a4ea1;
+  color: #0a4ea1;
+}
+
+.registration-steps_step.-active > .text {
+  color: #0a4ea1;
+  font-weight: 700;
+}
+
 .max-w200 {
   max-width: 200px;
 }
@@ -846,14 +921,18 @@ li.book-card {
 }
 
 .header__right p {
+  padding: 0;
   width: 100%;
   height: 45px;
   border-radius: 0px;
-  cursor: pointer;
 }
 
 .header__right p a {
+  display: inline-block;
   color: #fff;
+  height: 100%;
+  width: 100%;
+  line-height: 45px;
 }
 
 .header__right .tutorial {
@@ -1010,6 +1089,346 @@ li.book-card {
   }
 }
 
+.top-iamge {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: .6s;
+  transition: .6s;
+}
+
+.popup.is-show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup-inner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 600px;
+  padding: 50px;
+  background-color: #fff;
+  z-index: 2;
+}
+
+.popup-inner img {
+  width: 100%;
+}
+
+.close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.close-btn i {
+  font-size: 20px;
+  color: #333;
+}
+
+.black-background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+  cursor: pointer;
+}
+
+h2 {
+  color: #ccc;
+  font-family: "raleway", sans-serif;
+  opacity: 1;
+  text-align: center;
+  -webkit-transition: opacity .8s;
+  transition: opacity .8s;
+}
+
+h2.hide {
+  opacity: 0;
+}
+
+.sand {
+  background: #B69C77;
+  height: 30%;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.bb8 {
+  position: absolute;
+  margin-left: -70px;
+  width: 140px;
+  bottom: 20%;
+  left: 0;
+}
+
+.antennas {
+  position: absolute;
+  -webkit-transition: left .6s;
+  transition: left .6s;
+  left: 22%;
+}
+
+.antennas.right {
+  left: 0%;
+}
+
+.antenna {
+  background: #e0d2be;
+  position: absolute;
+  width: 2px;
+}
+
+.antenna.short {
+  height: 20px;
+  top: -60px;
+  left: 50px;
+}
+
+.antenna.long {
+  border-top: 6px solid #020204;
+  border-bottom: 6px solid #020204;
+  height: 36px;
+  top: -78px;
+  left: 56px;
+}
+
+.head {
+  background: #e0d2be;
+  border-radius: 90px 90px 14px 14px;
+  -moz-border-radius: 90px 90px 14px 14px;
+  -webkit-border-radius: 90px 90px 14px 14px;
+  height: 56px;
+  margin-left: -45px;
+  overflow: hidden;
+  position: absolute;
+  width: 90px;
+  z-index: 1;
+  top: -46px;
+  left: 50%;
+}
+
+.head .stripe {
+  position: absolute;
+  width: 100%;
+}
+
+.head .stripe.one {
+  background: #999;
+  height: 6px;
+  opacity: .8;
+  z-index: 1;
+  top: 6px;
+}
+
+.head .stripe.two {
+  background: #CD7640;
+  height: 4px;
+  top: 17px;
+}
+
+.head .stripe.three {
+  background: #999;
+  height: 4px;
+  opacity: .5;
+  bottom: 3px;
+}
+
+.head .eyes {
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  -webkit-transition: left .6s;
+  transition: left .6s;
+  left: 0%;
+}
+
+.head .eyes.right {
+  left: 36%;
+}
+
+.head .eye {
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+}
+
+.head .eye.one {
+  background: #020204;
+  border: 4px solid #e0d2be;
+  height: 30px;
+  width: 30px;
+  top: 12px;
+  left: 12%;
+}
+
+.head .eye.one:after {
+  background: white;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 3px;
+  position: absolute;
+  width: 3px;
+  top: 4px;
+  right: 4px;
+}
+
+.head .eye.two {
+  background: #e0d2be;
+  border: 1px solid #020204;
+  height: 16px;
+  width: 16px;
+  top: 30px;
+  left: 40%;
+}
+
+.head .eye.two:after {
+  background: #020204;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 10px;
+  position: absolute;
+  width: 10px;
+  top: 2px;
+  left: 2px;
+}
+
+.ball {
+  background: #d1c3ad;
+  border-radius: 50%;
+  height: 140px;
+  overflow: hidden;
+  position: relative;
+  width: 140px;
+}
+
+.lines {
+  border: 2px solid #B19669;
+  border-radius: 50%;
+  height: 400px;
+  opacity: .6;
+  position: absolute;
+  width: 400px;
+}
+
+.lines.two {
+  top: -10px;
+  left: -250px;
+}
+
+.ring {
+  background: #CD7640;
+  border-radius: 50%;
+  height: 70px;
+  margin-left: -35px;
+  position: absolute;
+  width: 70px;
+}
+
+.ring:after {
+  background: #d1c3ad;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 70%;
+  margin-top: -35%;
+  margin-left: -35%;
+  position: absolute;
+  width: 70%;
+  top: 50%;
+  left: 50%;
+}
+
+.ring.one {
+  margin-left: -40px;
+  height: 80px;
+  width: 90px;
+  top: 6%;
+  left: 50%;
+}
+
+.ring.two {
+  height: 38px;
+  width: 76px;
+  -webkit-transform: rotate(36deg);
+  transform: rotate(36deg);
+  top: 70%;
+  left: 18%;
+}
+
+.ring.two:after {
+  top: 100%;
+}
+
+.ring.three {
+  height: 30px;
+  -webkit-transform: rotate(-50deg);
+  transform: rotate(-50deg);
+  top: 66%;
+  left: 90%;
+}
+
+.ring.three:after {
+  top: 110%;
+}
+
+.shadow {
+  background: #3A271C;
+  border-radius: 50%;
+  height: 23.33333px;
+  opacity: .7;
+  position: absolute;
+  width: 140px;
+  z-index: -1;
+  left: 5px;
+  bottom: -8px;
+}
+
+.shameless {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+a {
+  color: #333;
+  font-family: 'Raleway', sans-serif;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #333;
+}
+
 .cafe-disp {
   padding-top: 40px;
   padding-bottom: 120px;
@@ -1118,5 +1537,49 @@ li.book-card {
 .book-add-check .form-btns button {
   margin-right: 16px;
   margin-bottom: 16px;
+}
+
+.regist {
+  padding: 60px 0 120px;
+}
+
+.regist__text {
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.regist .regist-form {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.regist-check {
+  padding: 60px 0 120px;
+}
+
+.login {
+  padding: 60px 0 120px;
+}
+
+.login__text {
+  font-size: 1.4rem;
+  max-width: 450px;
+  margin: 0 auto;
+  margin-bottom: 24px;
+}
+
+.login .login-form {
+  max-width: 600px;
+  margin: 64px auto 32px;
+  text-align: center;
+}
+
+.login .text-c {
+  text-align: center;
+}
+
+.login .text-c a {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
