ログイン機能を作成

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1579,6 +1579,10 @@ a:visited {
   margin-bottom: 16px;
 }
 
+.regist-done {
+  padding: 60px 0 120px;
+}
+
 .login {
   padding: 60px 0 120px;
 }
