--- a/assets/css/_project.scss
+++ b/assets/css/_project.scss
@@ -4,60 +4,33 @@
 }
 
 // 工事中モーダル
-.popup {
+.content{
+  margin: 0 auto;
+  padding: 40px;
+}
+.modal{
+  z-index: 99999;
+  display: none;
+  height: 100vh;
   position: fixed;
-  left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
-  z-index: 9999;
-  opacity: 0;
-  visibility: hidden;
-  transition: .6s;
 }
-.popup.is-show {
-  opacity: 1;
-  visibility: visible;
-}
-.popup-inner {
+.modal__bg{
+  background: rgba(0,0,0,0.8);
+  height: 100vh;
   position: absolute;
+  width: 100%;
+}
+.modal__content{
+  background: #fff;
   left: 50%;
+  padding: 40px;
+  position: absolute;
   top: 50%;
   transform: translate(-50%,-50%);
-  width: 80%;
-  max-width: 600px;
-  padding: 50px;
-  background-color: #fff;
-  z-index: 2;
+  width: 60%;
 }
-.popup-inner img {
-  width: 100%;
-}
-.close-btn {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  cursor: pointer;
-}
-.close-btn i {
-  font-size: 20px;
-  color: #333;
-}
-.black-background {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.8);
-  z-index: 1;
-  cursor: pointer;
-}
-
 // 工事中モーダルここまで
 
 // bb8
