--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -980,6 +980,67 @@ li.book-card {
   font-weight: 700;
 }
 
+.profile-card {
+  width: 100%;
+  text-align: center;
+  background-color: #fff;
+  padding: 24px;
+}
+
+.profile-card__image {
+  margin-bottom: 16px;
+}
+
+.profile-card__image img {
+  border-radius: 50%;
+  width: 72px;
+  height: 72px;
+  margin: 0 auto;
+}
+
+.profile-card__name {
+  color: #333;
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.profile-card__memo textarea {
+  border: none;
+  width: 100%;
+  resize: none;
+}
+
+.profile-card__edit {
+  background-color: #333;
+  color: #fff;
+  font-weight: bold;
+  padding: 4px 0;
+}
+
+.profile-numbers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 24px;
+}
+
+.profile-numbers__box {
+  width: 104px;
+  text-align: center;
+}
+
+.profile-numbers__number {
+  font-size: 2rem;
+}
+
+.profile-numbers__title {
+  font-size: 1.2rem;
+}
+
 .max-w200 {
   max-width: 200px;
 }
@@ -1678,5 +1739,28 @@ a:visited {
 
 .login .text-c a {
   text-decoration: underline;
+}
+
+.mypage .section-inner {
+  margin: 24px auto 0;
+}
+
+@media screen and (min-width: 768px) {
+  .mypage .section-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mypage__profile {
+    max-width: 360px;
+  }
+}
+
+.mypage__posts {
+  width: auto;
+  padding: 24px;
 }
 /*# sourceMappingURL=style.css.map */
