--- a/assets/css/_common-parts.scss
+++ b/assets/css/_common-parts.scss
@@ -773,23 +773,35 @@ li.book-card {
     }
   }
   &__name {
+    border: none;
+    text-align: center;
     color: #333;
     font-size: 1.8rem;
     font-weight: bold;
     margin-bottom: 4px;
+    pointer-events: none;
   }
   &__memo {
+    height: auto;
     textarea {
       border: none;
       width: 100%;
       resize: none;
+      pointer-events: none;
+      height: calc( 1.8em * 3 );
+      line-height: 1.8;
     }
   }
   &__edit {
+    height: auto;
+    text-align: center;
+    display: inline-block;
+    width: 100%;
     background-color: #333;
     color: #fff;
     font-weight: bold;
     padding: 4px 0;
+    cursor: pointer;
   }
 }
 
